<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Na Hora Da Conta</string>
    <string name="action_settings">Settings</string>
    
    <string name="total_bill">Total da conta</string>
    <string name="plus_10">+ 10%</string>
    <string name="total_person">Total Individual</string>
    
    <string name="buddy_name_hint">nome</string>
    <string name="item_name_hint">nome</string>
    <string name="item_unit_price_hint">preço unitario</string>
    <string name="item_qtd_hint">quantidade</string>
    
    <string name="button_cancel">Voltar</string>
    <string name="button_save">Salvar</string>
    
    <string name="merge_item_person_desc_text">Selecione os itens que o(a) jovem %s consumiu:</string>
    
    <string name="content_adduser">Clique para adicionar uma Pessoa</string>
    <string name="content_additem">Clique para adicionar um Item</string>
    <string name="content_check">Fechar a conta e informar a quantidade de itens</string>
    
</resources>
