<?xml version="1.0" encoding="utf-8"?>
<apps.br.nhc.view.component.RelativeLayoutDialog xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/back_dialog"
    >
    
    <RelativeLayout 
        android:layout_width="wrap_content"
    	android:layout_height="wrap_content"
    	android:layout_centerInParent="true"
    	android:padding="@dimen/padding_dialog"
    	android:background="@color/back_dialog_internal">
        
	    <EditText
	        android:id="@+id/add_item_edit_name"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:hint="@string/item_name_hint"
	        android:inputType="textCapCharacters"
	        />
	    
	    <EditText
	        android:id="@+id/add_item_edit_unit_price"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_below="@id/add_item_edit_name"
	        android:hint="@string/item_unit_price_hint"
	        android:inputType="numberDecimal"
	        />
	    
	    <EditText
	        android:id="@+id/add_item_edit_qtd"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_below="@id/add_item_edit_unit_price"
	        android:hint="@string/item_qtd_hint"
	        android:inputType="number"
	        />
	    
	    <Button 
	        android:id="@+id/add_item_button_cancel"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_below="@id/add_item_edit_qtd"
	        style="?android:attr/buttonStyle"
	        android:text="@string/button_cancel"
	        />
	    
	    <Button 
	        android:id="@+id/add_item_button_save"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_toRightOf="@id/add_item_button_cancel"
	        android:layout_alignTop="@id/add_item_button_cancel"
	        style="?android:attr/buttonStyle"
	        android:text="@string/button_save"
	        />
	    
	    <ListView 
	        android:id="@+id/add_item_list"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_alignParentBottom="true"
	        android:layout_below="@id/add_item_button_cancel"
	        android:layout_margin="@dimen/list_margin"
        	android:background="@color/blue_back_list"
	        />

    </RelativeLayout>
    
</apps.br.nhc.view.component.RelativeLayoutDialog>
